# lexicons

./: .gitignore  README.md  pyproject.toml
lexicons/: test.json
lexicons/transient/: gcn.json
src/lexicon_import/: __init__.py  gcn.py
