[project]
name = "lexicon_import"
version = "0.1.0"
description = "Python utilities for converting various well-known lexicons to the ATProto schema."
readme = "README.md"
authors = [{ name = "emilyhunt", email = "emily.hunt.physics@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
update-gcn = "lexicon_import:gcn.update"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
